# cudald

./: .gitmodules  CMakeLists.txt  environment.yml
data/: genotype.h5
include/: mkl_cov.hpp
src/: cudacov.hpp  cutest.cu  main.cpp  mkl_cov.cpp  mkl_cov.hpp  zstd_h5plugin.c  zstd_h5plugin.h
tests/: testmkl.cpp
